--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
     <input type="text" id="amount" placeholder="enter amount">
     <button id="submit">Submit</button>
     <h2></h2>
+    <script src="./script.js"></script>
 </body>
 </html>
